--- a/themes/meteor/layout/page.ejs
+++ b/themes/meteor/layout/page.ejs
@@ -15,8 +15,10 @@
     <div class="nav-group left">
       <div class="nav-item mobile-button js-sidebar-toggle show-mobile">
         <span class="icon-menu"></span>
+
       </div>
       <div class="nav-item">
+
         <% logo = config.logo || theme.logo %>
         <a class="logo-wrapper" href="/" title="<%- logo.title %> <%- logo.subtitle %>" <%- logo.target && 'target=' + logo.target %> >
           <img src="<%- relative_url(page.path, logo.nav_mobile) %>" alt="<%- logo.title %>" class="logo"/>
@@ -30,6 +32,8 @@
     </div>
 
 
+
+
     <style type="text/css">
             html,body{font-size: 14px;font-family: "微软雅黑";text-align: left;width: 100%;height: 100%;min-height: 100%;border:0;line-height: none;}
             p{border: 0;margin: 0;padding: 0;line-height: none;}
@@ -40,7 +44,7 @@
 
 
     <div class="nav-group right">
-      <div class="nav-item show-desktop">
+      <div class="nav-item ">
         <% 
           var path = page.path;
           var isEN = path.indexOf('en') == 0; 
