delete some files

--- a/themes/meteor/layout/page.ejs
+++ b/themes/meteor/layout/page.ejs
@@ -87,7 +87,7 @@
                 <span><%- __('Edit') %></span>
               </a>
               <% if (page.discourseTopicId) { %>
-                <a class="btn tertiary small round lowercase" href="https://forums.meteor.com/t/<%- page.discourseTopicId %>">
+                <a class="btn tertiary small round lowercase" href="//forums.meteor.com/t/<%- page.discourseTopicId %>">
                   <span class="icon-comment"></span>
                   <span>Discuss</span>
                 </a>
