--- a/themes/meteor/layout/layout.ejs
+++ b/themes/meteor/layout/layout.ejs
@@ -88,7 +88,7 @@
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?<%- theme.apis.baidu %>";
+          hm.src = "//hm.baidu.com/hm.js?<%- theme.apis.baidu %>";
           var s = document.getElementsByTagName("script")[0]; 
           s.parentNode.insertBefore(hm, s);
         })();
