Update layout.ejs use native js

--- a/themes/meteor/layout/layout.ejs
+++ b/themes/meteor/layout/layout.ejs
@@ -58,8 +58,8 @@
       // Used by the main.js script below.
       docsConfigRoot = '<%- config.root %>';
     </script>
-    <script src="<%= url_for('/main.js', { relative: true }) %>"></script>
-    <script src="<%= url_for('/highlight.js', { relative: true }) %>"></script>
+    <script src="<%= url_for('/script/main.js', { relative: true }) %>"></script>
+    <script src="<%= url_for('/script/highlight.js', { relative: true }) %>"></script>
 
     <script type="text/javascript" src="//cdn.jsdelivr.net/fastclick/1.0.6/fastclick.min.js"></script>
 
