--- a/themes/meteor/layout/page.ejs
+++ b/themes/meteor/layout/page.ejs
@@ -135,19 +135,19 @@
       <div class="content-wrapper">
 
         <div class="document-formatting">
-          <!--fix table -->
-          <%- page.content %>
-
-
+          <!--fix table 使用标签<table class="class">需要额外加代码，-->
           <%
                 page.content = page.content.replace(/<table>(.+)<\/table>/, function(match, $1) {
                    $1 = $1.replace(/<br>/g, '');
                    return `<table>${$1}</table>`;
                 });            %>
-
-          <!--fix table -->
+          <!--fix table 注意要放在page.content前面。-->
+          <%- page.content %>
+         
 
         </div>
+
+      </div>
 
         
 
