--- a/themes/meteor/page.ejs
+++ b/themes/meteor/page.ejs
@@ -139,15 +139,20 @@
         <div class="document-formatting">
         <!--fix table 使用标签<table class="class">需要额外加代码，-->
           <%
-                page.content = page.content.replace(/<table class="table">(.+)<\/table>/, function(match, $1) {
+                page.content = page.content.replace(/<table>(.+)<\/table>/, function(match, $1) {
                    $1 = $1.replace(/<br>/g, '');
-                   return `<table >${$1}</table>`;
+                   return `<table>${$1}</table>`;
                 });            %>
           <!--fix table 注意要放在page.content前面。-->
           <%- page.content %>
         </div>
 
-  
+        <div class="content-wrapper">
+        <div class="document-formatting">
+          <%- page.content %>
+        </div>
+
+     
         <div class="pagination">
           <div class="content-wrapper">
             <%
